clickCounters work properly for each button, now to add cookies as in the code yknow

--- a/eatcookie.html
+++ b/eatcookie.html
@@ -8,18 +8,18 @@
 
 	<div class='wrapper'>
 		<h1>Click on a cookie to eat it, ya kook</h1>
-		<button class='sugar' onclick="modify_qty(1)">
-			<input id="more" value="0" />
+		<button class='sugar' onclick="add_sug(1)">
+			<input id="addSug" value="0" />
 			<br>
 			<img src="shuga.jpg">
 		</button>
-		<button class='chocolate' onclick="modify_qty(1)">
-			<input id="more" value="0" />
+		<button class='chocolate' onclick="add_choc(1)">
+			<input id="addChoc" value="0" />
 			<br>
 			<img src="choco.jpg">
 		</button>
-		<button class='lemon' onclick="modify_qty(1)">
-			<input id="more" value="0" />
+		<button class='lemon' onclick="add_lmn(1)">
+			<input id="addLmn" value="0" />
 			<br>
 			<img src="lemony.jpg">
 		</button>
