--- a/eatcookie.html
+++ b/eatcookie.html
@@ -23,11 +23,14 @@
 			<br>
 			<img src="lemony.jpg">
 		</button>
+		<button onclick="hide_evidence()">Click then reload page to hide evidence
+		</button>
 	</div>
 
-	<script type="text/javascript" src="eatcookie.js"></script>
+
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="cookies.js"></script>
+	<script type="text/javascript" src="eatcookie.js"></script>
 	
 </body>
 </html>
